WIP fixed tests and api starts up. Pending cleanup of code and removing references to Pen coordinators